<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageViewRoomDetail"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/room_image_desc" />

        <TextView
            android:id="@+id/textViewRoomNameDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toBottomOf="@id/imageViewRoomDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Ocean View Suite" />

        <TextView
            android:id="@+id/textViewRoomPriceDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/textViewRoomNameDetail"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="$550 / night" />

        <TextView
            android:id="@+id/textViewRoomDescriptionDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/textViewRoomPriceDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Detailed description of the room, amenities, features like balcony, bathtub, king-size bed, etc. goes here. Providing guests with all necessary information." />

        <TextView
            android:id="@+id/textViewCheckInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/check_in_date_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/textViewRoomDescriptionDetail"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewCheckInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/purple_700"
            android:text="@string/select_date_prompt"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@id/textViewCheckInLabel"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewCheckInLabel" />


        <TextView
            android:id="@+id/textViewCheckOutLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/check_out_date_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/textViewCheckInLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewCheckOutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/purple_700"
            android:text="@string/select_date_prompt"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@id/textViewCheckOutLabel"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewCheckOutLabel" />


        <Button
            android:id="@+id/buttonBookRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/book_now_button"
            app:layout_constraintTop_toBottomOf="@id/textViewCheckOutLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>